assets/main.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans|Oswald|Roboto+Condensed|Roboto+Slab|ZCOOL+QingKe+HuangYou');

body {
	width: 100%;
	height: 100vh;
	margin: 0 auto;
}

:root {
  --burgundy: #8C001A;
  --crimson: #990000;
  --cordial: #30000c;
  --gray: #cccccc;
  --granite: #666666;
  --kale: #7DCEA0;
  --scarlet: #ff0000;
  --rose: #ffe6ea;
  --bubblegum: #ffb3bf;
  --slate: #272727;
}


/* Navigation Menu */

.navwrap {
  /*width: 100%;*/
  display: flex;
  flex-direction: row;
  padding: 30px 0;
  text-align: center;
  background: var(--cordial);/*var(--gray)*/
}

ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.nav {
  /*width: 100%;*/
  display: inline-block;
  margin: 0 auto;
}

.nav>li {/* defines navbar menu item segments*/
  float: left;
  position: relative;
  border-right: 1px solid white;
  width: 200px
}

.nav>li:last-child {
  border: none
}

.nav li a {
  display: block;
  padding: 8px 20px;
  font-family: 'Open Sans', sans-serif;
  font-size: 18px;
  color: white;/*#fff*/
  text-decoration: none;
  background: var(--cordial);
}

.nav li li a {/*defines the dropdown menu*/
  background: white;
  color: var(--cordial);
  font-size: 15.5px;
  border-bottom: 1px solid var(--gray);
  float: center !important;
}

.nav li li:last-child a {
  border: none
}

.nav li ul {
  position: absolute;
  left: 0;
  top: 100%;
  width: 200px;
  margin-left: -999em;
/*   border: 1px solid var(--gray); */
  z-index: 99;
}

.nav li:hover ul {
  margin-left: 0
}

.nav>li:hover>a {
  color: var(--rose);
}

.nav li li a:hover {
  background: var(--granite);
  color: white;
}

/* the arrow */

.nav>li:hover>a:after {
  content: "";
  height: 0;
  width: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-bottom: 6px solid white;
  position: absolute;
  bottom: -1px;
  left: 50%;
  margin: 0 0 0 -3px;
  z-index: 100;
}

/* Content */

#content {
	width: 100%;
	height: 250px; /*in prodution remove or change to auto*/
	background: linear-gradient(rgba(198, 198, 198, 0.5),rgba(198, 198, 198, 0.5)), url("Teaneck Municipal Building Vintage.jpg");/*no-repeat fixed center*/
	background-repeat: no-repeat;
	background-size: cover;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
	border: 3px dotted gold;
}

#welcome {
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	color: #8C001A;
	border: 3px dotted fuchsia;
}

.write {
	width: 100%;
	font-size: 1.5em;
	font-weight: 700;
	text-align: center;
	color: var(--cordial);
}



/*--	Footer Start --*/
/* W3Hub Footer */

footer {
  width: 100%;
  bottom: 0;
/*   position: fixed; */
}

#footer{
	width: 100%;
	height: auto;
	margin: auto;
	background: var(--cordial);/*#272727 */
	padding: 20px 0px;
	
}
.footer-icon{
	width: 100%;
	height: auto;
	margin: auto;
	padding-top: 20px;
}

.footer-icon ul{
	margin: 0px;
	padding: 0px;
	text-align: center;
}

.footer-icon ul li{
	display: inline-block;
	width: 40px;
	height: 40px;
	margin: 0px 10px;
	padding-top: 5px; /*move icon down some*/
	border-radius: 100%;
	background: var(--gray); /*#7DCEA0*/
}

.footer-icon ul li a{
	text-decoration: none;
	color: var(--slate);
	font-size: 25px;
	display: block;
}

.footer-icon ul li a i{
	line-height: 50px;
}

.footer-icon ul li:hover{
	background: var(--bubblegum);/*e67e22*/
}

.footer-icon ul li a:hover >i{
	transform: scale(1.6) rotate(25deg);
}

.footer-nav{
	width: 100%;
	height: auto;
	margin: auto;
	margin-top: 25px;
}

.footer-nav ul{
	margin: 0px;
	padding: 0px;
	text-align: center;
}

.footer-nav ul li{
	display: inline-block;
	margin: 10px 20px;	 
}

.footer-nav ul li a{
	text-decoration: none;
	outline: none;
	font-family: 'Open Sans', sans-serif;
	font-size: 14px;
	color: #fff;
	font-weight: bold;
	text-transform: uppercase;
	letter-spacing: 1px;
}

.footer-nav ul li a:hover{
	color: var(--bubblegum);/*#e67e22*/
}

.footer-nav1{
	width: 100%;
	height: auto;
	margin: auto;
	margin-top: 15px;
}

.footer-nav1 ul{
	margin: 0px;
	padding: 0px;
	text-align: center;
}

.footer-nav1 ul li{
	display: inline-block;
	margin: 0px 20px;	 
}
.footer-nav1 ul li a{
	text-decoration: none;
	outline: none;
	font-family: 'Open Sans', sans-serif;
	font-size: 14px;
	color: #fff;
	font-weight: bold;
	text-transform: uppercase;
	letter-spacing: 1px;
}
.footer-nav1 ul li a:hover{
	color: var(--bubblegum);/*#e67e22*/
}
.footer-nav2{
	width: 100%;
	height: auto;
	margin: auto;
}
.footer-nav2 ul{
	
	text-align: center;
}

.footer-nav2 ul li{
	
	width: 40px;
	height: 40px;
	margin: 0px 10px;
	padding-top: 5px;
	border-radius: 100%;
	background: var(--gray); /*#fff */
}
.footer-nav2 ul li a{
	text-decoration: none;
	color: var(--slate);
	font-size: 25px;
	display: block;
}
.footer-nav2 ul li a i{
	line-height: 50px;
}
.footer-nav2 ul li:hover{
	background: var(--bubblegum);/*#e67e22*/
}
.footer-nav2 ul li a:hover >i{
	transform: scale(1.6) rotate(180deg);
}
.footer-end{
	width: 100%;
	height: auto;
	margin: auto;
	background: #7DCEA0;
	padding: 10px;
	font-family: 'Open Sans', sans-serif;
	font-size: 14px;
	text-align: center;
}

.footer-end p{
	font-family: 'Open Sans', sans-serif;
	font-size: 14px;
	text-align: center;
	color: #fff;
	font-weight: bold;
	letter-spacing: 2px;

}

footer p {
    font-family: 'Montserrat';
    font-size: 0.8125em;
    text-align: center;
}

.foot-menu ul li {
  position: relative;
  display: inline;
  padding: 10px;
  background-color: var(--cordial);
  border-right: 1px solid white;
}

.footer-base {text-align: center;}

.footer-base p {
  color: white;
}

a#masthead, a#webmaster {
  color: papayawhip;
  text-decoration: none;
}


a#masthead:hover, a#webmaster:hover {
  color: var(--kale);
}


/*-- Footer End --*/

